[tool.poetry]
name = "my-orchestrator"
version = "0.1.0"
description = "A clone of airflow that will be used to master python"
authors = ["rafik <oulebsir.rafik.enp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
